[gd_scene load_steps=11 format=2]

[ext_resource path="res://interface/themes/General.tres" type="Theme" id=1]
[ext_resource path="res://interface/pause_menu/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://interface/dynamic_fonts/Silver_128.tres" type="DynamicFont" id=3]
[ext_resource path="res://core/utils/KeyLabel.gd" type="Script" id=4]
[ext_resource path="res://interface/pause_menu/unpause.wav" type="AudioStream" id=6]
[ext_resource path="res://interface/pause_menu/pause.wav" type="AudioStream" id=7]
[ext_resource path="res://core/audio_bus_level_controllers/AudioSettingsHUD.tscn" type="PackedScene" id=8]
[ext_resource path="res://interface/menus/GraphicsMenu.tscn" type="PackedScene" id=9]
[ext_resource path="res://interface/input_mapper/InputMenu.tscn" type="PackedScene" id=10]
[ext_resource path="res://core/utils/ButtonKey.tscn" type="PackedScene" id=11]

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
layer = 125
script = ExtResource( 2 )
game_path = "res://core/Game.tscn"
main_menu_path = "res://level/levels/adventurers_guild/AdventurersGuild.tscn"
restart_transition_in_animation = "left_to_right"
quit_transition_in_animation = "left_to_right"

[node name="Background" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 128.0
margin_top = 128.0
margin_right = -128.0
margin_bottom = -128.0
mouse_filter = 2
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Pause"]
anchor_right = 1.0
margin_top = -1.86757
margin_bottom = 134.132
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PAUSED"
align = 1
valign = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="Pause"]
anchor_right = 1.0
margin_top = 126.758
mouse_filter = 2
custom_constants/separation = 32
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" parent="Pause/Buttons" instance=ExtResource( 11 )]
margin_right = 392.0
margin_bottom = 68.0
text = "RESUME"

[node name="Restart" parent="Pause/Buttons" instance=ExtResource( 11 )]
margin_left = 424.0
margin_right = 816.0
margin_bottom = 68.0
text = "RESTART"

[node name="Settings" parent="Pause/Buttons" instance=ExtResource( 11 )]
margin_left = 848.0
margin_right = 1240.0
margin_bottom = 68.0
text = "SETTINGS"

[node name="Quit" parent="Pause/Buttons" instance=ExtResource( 11 )]
margin_left = 1272.0
margin_right = 1664.0
margin_bottom = 68.0
text = "QUIT_TO_MENU"

[node name="PauseSfx" type="AudioStreamPlayer" parent="Pause"]
stream = ExtResource( 7 )
bus = "Sfx"

[node name="UnpauseSfx" type="AudioStreamPlayer" parent="Pause"]
stream = ExtResource( 6 )
bus = "Sfx"

[node name="Settings" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 128.0
margin_top = 128.0
margin_right = -128.0
margin_bottom = -128.0
mouse_filter = 2
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Settings"]
anchor_right = 1.0
margin_top = -1.86757
margin_bottom = 134.132
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SETTINGS"
align = 1
valign = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="Settings"]
anchor_right = 1.0
margin_top = 126.758
margin_bottom = 202.758
mouse_filter = 2
custom_constants/separation = 32
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" parent="Settings/Buttons" instance=ExtResource( 11 )]
margin_right = 392.0
margin_bottom = 75.0
text = "AUDIO"

[node name="Controls" parent="Settings/Buttons" instance=ExtResource( 11 )]
margin_left = 424.0
margin_right = 816.0
margin_bottom = 75.0
text = "CONTROLS"

[node name="Graphics" parent="Settings/Buttons" instance=ExtResource( 11 )]
margin_left = 848.0
margin_right = 1240.0
margin_bottom = 75.0
text = "GRAPHICS"

[node name="Back" parent="Settings/Buttons" instance=ExtResource( 11 )]
margin_left = 1272.0
margin_right = 1664.0
margin_bottom = 75.0
text = "BACK"

[node name="InputMenu" parent="." instance=ExtResource( 10 )]
margin_left = 128.0
margin_top = 128.0
margin_right = -128.0
margin_bottom = -128.0

[node name="AudioSettingsHUD" parent="." instance=ExtResource( 8 )]
visible = false
margin_left = 128.0
margin_top = 128.0
margin_right = -128.0
margin_bottom = -128.0

[node name="GraphicsMenu" parent="." instance=ExtResource( 9 )]
visible = false
margin_left = 128.0
margin_top = 128.0
margin_right = -128.0
margin_bottom = -128.0
[connection signal="pressed" from="Pause/Buttons/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Pause/Buttons/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Pause/Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Pause/Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Settings/Buttons/Audio" to="." method="_on_Audio_pressed"]
[connection signal="pressed" from="Settings/Buttons/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="Settings/Buttons/Graphics" to="." method="_on_Graphics_pressed"]
[connection signal="pressed" from="Settings/Buttons/Back" to="." method="_on_SettingsBack_pressed"]
[connection signal="finished" from="InputMenu" to="." method="_on_InputMenu_finished"]
[connection signal="finished" from="AudioSettingsHUD" to="." method="_on_AudioSettingsHUD_finished"]
[connection signal="finished" from="GraphicsMenu" to="." method="_on_GraphicsMenu_finished"]
